syntax = "proto3";

option go_package = "github.com/mingkaic/testify/proto";

package testify;

import "proto/testdata.proto";

message Nothing {}

message Testname
{
    string name = 1;
}

message Testcase
{
    string name = 1;
    TestOutput results = 2;
}

message TestOutputs {
    repeated TestOutput outputs = 1;
}

message TestStorage
{
    map<string,TestOutputs> storage = 1;
}

service Dora
{
    rpc AddTestcase(Testcase) returns (Nothing) {}
    rpc ListTestcases(Nothing) returns (stream Testname) {}
    rpc GetTestcase(Testname) returns (stream TestOutput) {}
}
